# csympy

./: CMakeLists.txt
src/: CMakeLists.txt
src/ruby/: CMakeLists.txt
src/ruby/lib/symengine/: CMakeLists.txt
symengine/ruby/ext/symengine/: ruby_add.h  ruby_mul.h  ruby_pow.h  symengine.c  symengine.h
